# Teye-Contracts

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
.github/workflows/: benchmark.yml  ci.yml  deploy-testnet.yml  mutation.yml  security.yml  test.yml
contracts/ai_integration/: Cargo.toml
contracts/ai_integration/src/: lib.rs  test.rs
contracts/analytics/: Cargo.toml
contracts/benches/: gas_usage.rs  public_functions.rs  regression.rs
contracts/common/: Cargo.toml
contracts/cross_chain/: Cargo.toml
contracts/delegation/: Cargo.toml
contracts/emr_bridge/: Cargo.toml
contracts/identity/: Cargo.toml
contracts/identity/src/: credential.rs  did.rs  lib.rs  recovery.rs
contracts/identity/tests/: core.rs
contracts/staking/: Cargo.toml
contracts/staking/src/: events.rs  lib.rs  test.rs  test_admin_tiers.rs
contracts/tests/: governance_tests.rs  portability_tests.rs
contracts/treasury/: Cargo.toml
contracts/vision_records/: Cargo.toml
contracts/vision_records/src/: circuit_breaker.rs  errors.rs  events.rs  examination.rs  export.rs  lib.rs  patient_profile.rs  rate_limit.rs  rbac.rs  test.rs  test_admin_tiers.rs  test_batch.rs  test_meta_tx.rs  test_pause.rs  test_profile.rs  test_rbac.rs
contracts/vision_records/tests/: core.rs  errors.rs  examination.rs  provider.rs  rbac.rs
contracts/vision_records/tests/common/: mod.rs
contracts/vision_records/tests/property/: access.rs  core.rs  main.rs  rbac.rs  state_machine.rs
docs/: ZK_INTEGRATION.md  ai_integration.md  analytics.md  api.md  architecture.md  common-library.md  cross_chain.md  deployment-security.md  deployment.md  emr-integration.md  error_scenarios.md  performance.md  post-quantum-zk-research.md  security-audit-checklist.md  security.md  testing.md  threat-model.md  treasury.md  upgrade_procedures.md  zk-architecture.md  zk-integration-guide.md
docs/adr/: 0000-template.md  0001-storage-design.md  0002-access-control-design.md  0003-event-system-design.md  0004-upgrade-strategy.md  0005-adr-process.md  0006-governance-staking-architecture.md  0007-zk-proof-integration.md  0008-cross-chain-bridge-design.md  0009-privacy-preserving-analytics.md  0010-ai-integration-security-model.md  0011-fhir-healthcare-interoperability.md  0012-concurrency-conflict-resolution.md
docs/api/: analytics.md  compliance.md  cross_chain.md  emr_bridge.md  fhir.md  governor.md  identity.md  metering.md  staking.md  treasury.md  zk_verifier.md  zk_voting.md
docs/integration/: README.md  troubleshooting.md
docs/onboarding/: README.md  codebase-tour.md  dev-environment.md  first-contribution.md  glossary.md  makefile-reference.md
example/js/: freighter_auth.js  invoke.js
example/python/: event_poller.py  webhook_listener.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: staking.rs  vision_records.rs
scripts/: check_storage_keys.sh  deploy.sh  deploy_testnet.sh  simulate_upgrade.rs
sdk/zk_prover/: Cargo.toml
test/negative/: invalid_input.rs  mod.rs  race_conditions.rs  resource_exhaustion.rs  unauthorized.rs
test/upgrade/: authorization.rs  backward_compatibility.rs  migration.rs  mod.rs
(+50 files in other folders)
