[package]
name = "teye-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
soroban-sdk = { version = "25.1.1", features = ["testutils"] }
vision_records = { path = "../contracts/vision_records", features = ["testutils"] }
staking = { path = "../contracts/staking", features = ["testutils"] }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "vision_records_fuzz"
path = "fuzz_targets/vision_records.rs"
test = false
doc = false

[[bin]]
name = "staking_fuzz"
path = "fuzz_targets/staking.rs"
test = false
doc = false
